<resources>
    <string name="app_name">Fruit Chat</string>

    <string name="app_system_error_no_context">系统出错，请尝试重新开启您的 APP</string>
    <string name="app_contact_search">搜索</string>
    <string name="app_user_info_unset">还没有设置</string>
    <string name="app_user_info_secret">保密</string>

    <string name="app_login_failed">登录失败</string>
    <string name="app_sign_failed">注册失败</string>

    <string name="app_get_contact_failed">拉取通讯录信息失败</string>

    <string name="app_get_conversation">会话载入中…</string>
    <string name="app_get_conversation_failed">您还没有对话</string>
    <string name="app_get_conversation_failed_refresh_hint">轻触屏幕以重新加载</string>

    <string name="app_login_hint_account">昵称</string>
    <string name="app_login_hint_password">密码</string>
    <string name="app_login_hint_password_ensure">确认密码</string>
    <string name="app_login_hint_tell">联系方式</string>
    <string name="app_login_hint_email">邮箱</string>
    <string name="app_login_hint_gender">您的性别:</string>

    <string name="app_login_text_login">登录</string>
    <string name="app_login_text_sign">注册</string>
    <string name="app_login_text_go_sign">注册新的帐户</string>

    <string name="app_sign_text_go_login">登录已有帐号</string>
    <string name="app_sign_welcome">欢迎您 , %1$s</string>

    <string name="app_login_warming_null_account">用户名无效!</string>
    <string name="app_login_warming_null_pwd">密码错误!</string>
    <string name="app_sign_warming_null_pwd_ensure">请确认密码!</string>
    <string name="app_sign_warming_pwd_ensure_error">两次输入不一致!</string>
    <string name="app_login_warming_null_tell">请输入联系方式!</string>
    <string name="app_login_warming_null_email">请输入邮箱!</string>

    <string name="app_main_index_chat">会话</string>
    <string name="app_main_index_contact">通讯录</string>
    <string name="app_main_index_setting">设置</string>

    <string name="app_main_title_chat">聊天</string>
    <string name="app_main_title_contact">联系人</string>
    <string name="app_main_title_setting">设置</string>

    <string name="app_fragment_contact_my_groups">我的讨论组</string>

    <string name="app_fragment_setting_clear_caches">清除缓存</string>
    <string name="app_fragment_setting_logout">登出</string>

    <string name="app_chat_error_empty_target">会话无法建立，查无此人！</string>

    <!--相册换肤-->
    <string name="loading_no_data">沒有找到可用图片</string>
    <string name="loading_progress">载入中，请稍候…</string>
    <string name="loading_refresh">轻触屏幕以重试</string>

    <string name="loading_video_progress">视频载入中，请稍候…</string>
    <string name="loading_video_error">视频载人失败</string>
    <string name="loading_video_error_tint">请检查文件是否损坏或暂不支持该文件类型</string>

    <string name="pg_str_all">全部</string>
    <string name="pg_str_cancel">返回</string>
    <string name="pg_str_album">文件夹</string>
    <string name="pg_str_all_files">所有类别</string>
    <string name="pg_str_picture_count">共 %1$d 个文件</string>
    <string name="pg_str_preview">预览</string>
    <string name="pg_str_send">完成</string>
    <string name="pg_str_full_images_tip">原图</string>
    <string name="pg_str_images_choose_tip_message">不能同时选取视频和图片文件</string>
    <string name="pg_str_video_choose_tip_message">视频只能选择一个</string>
    <string name="pg_str_at_best">最多只能选择 %1$d 张图片</string>
    <string name="pg_permission_request_fail">%s 必要权限被拒绝!</string>

    <!--teams-->
    <string name="app_act_teams_title">我的团队</string>
    <string name="app_act_teams_loading">团队信息载入中，请稍后…</string>
    <string name="app_act_teams_error">团队数据错误，请尝试重新登录</string>
    <string name="app_act_teams_no_one">您还没有加入任何团队</string>
    <string name="app_act_teams_re_select_teams">载入团队信息错误，请重新选择团队…</string>
    <string name="app_act_teams_select">选择一个已加入的团队，开始果聊</string>
    <string name="app_act_teams_relogin">重新登录</string>

    <!--user info-->
    <string name="app_act_user_info_title_default">%s 的个人资料</string>
    <string name="app_act_user_info_title">个人资料</string>
    <string name="app_act_user_info_user_img_avatar_hint">头像</string>
    <string name="app_act_user_info_user_nickname_hint">昵称</string>
    <string name="app_act_user_info_user_name_hint">用户名</string>
    <string name="app_act_user_info_user_describe_hint">个人签名</string>
    <string name="app_act_user_info_user_describe_default">这个人太懒了，什么都没有留下</string>
    <string name="app_act_user_info_send_msg">发消息</string>

    <!--  用户信息修改 -->
    <string name="app_act_user_edit_text_hint">等待输入内容</string>
    <string name="app_act_user_edit_text_commit">确定</string>
    <string name="app_act_user_edit_text_updating">更新中，请稍候…</string>
    <string name="app_act_user_edit_text_sum" translatable="false">0/0</string>

    <!--group-->
    <string name="app_act_groups_title">我的讨论组</string>
    <string name="app_act_create_groups_title">新建讨论组</string>
    <string name="app_act_create_groups_hint">正在创建讨论组…</string>
    <string name="app_act_create_groups_hint_not_create">请勿创建空的讨论组</string>
    <string name="app_act_create_groups_hint_add_not_user_to_group">新添用户不能为空</string>
    <string name="app_act_create_groups_hint_create_count1">请勿创建只有一个用户的讨论组</string>
    <string name="app_act_create_groups_hint_add_user_to_group">正在邀请成员到讨论组&#8230;&#8230;&#8230;</string>
    <string name="app_act_create_groups_hint_add_user_to_group_success">邀请成员到讨论组完成</string>
    <string name="app_act_create_groups_hint_add_user_to_group_fail">邀请成员到讨论组失败</string>

    <!--notify-->
    <string name="app_notification_new_message">新消息通知</string>
    <string name="app_notification_new_message_describe">收到信消息时的通知类别</string>
    <string name="app_notification_new_message_id">new_message_id</string>

    <!--group info-->
    <string name="app_act_contact_group_info_avatar_hint">头像</string>
    <string name="app_act_contact_group_info_name_hint">名称</string>
    <string name="app_act_contact_group_info_theme_hint">主题</string>
    <string name="app_act_contact_group_info_user_count_hint">成员</string>
    <string name="app_act_contact_group_info_user_count">成员（%d）</string>
    <string name="app_act_contact_group_info_dissolve">解散讨论组</string>
    <string name="app_act_contact_group_info_exit">退出讨论组</string>
    <string name="app_act_contact_group_info_exit_hint">正在退出讨论组&#8230;&#8230;&#8230;</string>
    <string name="app_act_contact_group_info_dissolve_hint">正在解散讨论组&#8230;&#8230;&#8230;</string>
    <string name="app_act_contact_group_info_send_msg_hint">发消息</string>


    <!--in common use-->
    <string name="app_common_network_error">请检查网络连接</string>
    <string name="app_common_no_data">暂无数据</string>
    <string name="app_common_completed">完成</string>
    <string name="app_common_completed_num_hint">完成(%d)</string>

</resources>
