<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pg_color_white"
    android:orientation="vertical">

    <LinearLayout style="@style/userInfoItemGroup">

        <TextView
            style="@style/userInfoItemHint"
            android:text="@string/app_act_user_info_user_img_avatar_hint" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="#0f0" />

    </LinearLayout>

    <LinearLayout style="@style/userInfoItemGroup">

        <TextView
            style="@style/userInfoItemHint"
            android:text="@string/app_act_user_info_user_nickname_hint" />

        <TextView
            style="@style/userInfoItemContent"
            tools:text="海洋" />

    </LinearLayout>

    <LinearLayout style="@style/userInfoItemGroup">

        <TextView
            style="@style/userInfoItemHint"
            android:text="@string/app_act_user_info_user_name_hint" />

        <TextView
            style="@style/userInfoItemContent"
            tools:text="user_sdjfl" />

    </LinearLayout>


    <LinearLayout style="@style/userInfoItemGroup">

        <TextView
            style="@style/userInfoItemHint"
            android:text="@string/app_act_user_info_user_describe_hint" />

        <TextView
            style="@style/userInfoItemContent"
            android:text="@string/app_act_user_info_user_describe_default" />

    </LinearLayout>

    <Button
        android:id="@+id/app_act_user_info_btn_creat_dialog"
        style="@style/btnStyle"
        android:text="@string/app_act_user_info_send_msg" />

</LinearLayout>