<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_base_background"
    android:orientation="vertical">

    <com.zj.base.view.BaseTitleView
        android:id="@+id/app_act_contact_group_info_titleView"
        style="@style/BaseTitleViewStyle"
        app:l_vDrawable="@mipmap/back"
        app:r_vText="@string/app_common_completed"
        app:r_vTextSize="16"
        tools:vTitle="@string/app_act_create_groups_title" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_act_contact_group_info_titleView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout style="@style/userInfoItemGroup">

                <TextView
                    style="@style/userInfoItemHint"
                    android:text="@string/app_act_contact_group_info_avatar_hint" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <androidx.cardview.widget.CardView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    app:cardCornerRadius="4dp"
                    app:cardElevation="0dp"
                    app:cardMaxElevation="0dp">

                    <ImageView
                        android:id="@+id/app_act_contact_group_info_iv_user_avatar"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:contentDescription="@string/app_act_user_info_user_img_avatar_hint"
                        android:scaleType="centerCrop" />

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <View style="@style/userInfoItemInterval" />

            <LinearLayout style="@style/userInfoItemGroup">

                <TextView
                    style="@style/userInfoItemHint"
                    android:text="@string/app_act_contact_group_info_name_hint" />

                <TextView
                    android:id="@+id/app_act_contact_group_info_tv_name"
                    style="@style/userInfoItemContent"
                    tools:text="IMax" />

            </LinearLayout>

            <View style="@style/userInfoItemInterval" />


            <LinearLayout style="@style/userInfoItemGroup">

                <TextView
                    style="@style/userInfoItemHint"
                    android:text="@string/app_act_contact_group_info_theme_hint" />

                <TextView
                    android:id="@+id/app_act_contact_group_info_tv_theme"
                    style="@style/userInfoItemContent"
                    android:gravity="start|center"
                    tools:text="​这个人太懒了，什么都没留下主题可以显示多行，没有最大行数限制" />

            </LinearLayout>

            <TextView
                android:id="@+id/app_act_contact_group_info_tv_user_count"
                style="@style/userInfoItemGroupGroup"
                android:text="@string/app_act_contact_group_info_user_count" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/app_act_contact_group_info_rv_users"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:overScrollMode="never"
                app:layoutManager="com.zj.imcore.yj.base.ToolGridLayoutManager"
                tools:itemCount="8"
                tools:listitem="@layout/app_act_contact_group_info_item_user" />


            <Button
                android:id="@+id/app_act_contact_group_info_tv_send_msg"
                style="@style/btnStyle"
                android:layout_marginTop="40dp"
                android:backgroundTint="@color/base_btn_selector"
                android:text="@string/app_act_contact_group_info_send_msg_hint" />

            <Button
                android:id="@+id/app_act_contact_group_info_tv_exit"
                style="@style/btnStyle"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/base_btn_selector"
                android:text="@string/app_act_contact_group_info_exit" />

            <Button
                android:id="@+id/app_act_contact_group_info_tv_dissolve"
                style="@style/btnStyle"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="40dp"
                android:backgroundTint="@color/base_btn_selector"
                android:text="@string/app_act_contact_group_info_dissolve" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.zj.loading.BaseLoadingView
        android:id="@+id/app_act_contact_group_info_blv"
        style="@style/BaseLoadingViewStyle"
        android:layout_below="@id/app_act_contact_group_info_titleView"
        android:visibility="gone" />
</RelativeLayout>