<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:id="@+id/app_act_sign_ll_content"
        android:paddingTop="60dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ScrollView
            android:id="@+id/app_act_sign_scr_content"
            android:overScrollMode="never"
            android:paddingBottom="30dp"
            android:paddingTop="30dp"
            android:clipToPadding="false"
            android:scrollbars="none"
            android:layout_width="match_parent"
            android:layout_height="270dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/app_act_sign_et_account_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    app:errorEnabled="true"
                    app:startIconDrawable="@mipmap/app_login_icon_account"
                    android:hint="@string/app_login_hint_account"
                    android:layout_marginBottom="5dp">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/app_act_sign_et_account"
                        style="@style/baseEtStyle.SingleLine"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/app_act_sign_et_password_layout"
                    style="@style/baseTextInputLayoutStyle"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    app:errorEnabled="true"
                    app:passwordToggleEnabled="true"
                    app:startIconDrawable="@mipmap/app_login_icon_password"
                    app:passwordToggleTint="@color/app_base_text_color_666"
                    android:hint="@string/app_login_hint_password"
                    android:layout_marginBottom="5dp">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/app_act_sign_et_password"
                        style="@style/baseEtStyle.SingleLine"
                        android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/app_act_sign_et_password_ensure_layout"
                    style="@style/baseTextInputLayoutStyle"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    app:errorEnabled="true"
                    app:passwordToggleEnabled="true"
                    app:startIconDrawable="@mipmap/app_sign_icon_pwd_check"
                    app:passwordToggleTint="@color/app_base_text_color_666"
                    android:hint="@string/app_login_hint_password_ensure"
                    android:layout_marginBottom="5dp">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/app_act_sign_et_password_ensure"
                        style="@style/baseEtStyle.SingleLine"
                        android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/app_act_sign_et_tell_layout"
                    style="@style/baseTextInputLayoutStyle"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    app:errorEnabled="true"
                    app:startIconDrawable="@mipmap/app_sign_icon_tell"
                    app:passwordToggleTint="@color/app_base_text_color_666"
                    android:hint="@string/app_login_hint_tell"
                    android:layout_marginBottom="5dp">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/app_act_sign_et_tell"
                        style="@style/baseEtStyle.SingleLine"
                        android:inputType="phone"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/app_act_sign_et_email_layout"
                    style="@style/baseTextInputLayoutStyle"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    app:errorEnabled="true"
                    app:startIconDrawable="@mipmap/app_sign_icon_email"
                    app:passwordToggleTint="@color/app_base_text_color_666"
                    android:hint="@string/app_login_hint_email"
                    android:layout_marginBottom="5dp">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/app_act_sign_et_email"
                        style="@style/baseEtStyle.SingleLine"
                        android:inputType="textEmailAddress"/>

            </com.google.android.material.textfield.TextInputLayout>
            <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="80dp"
                    android:layout_marginTop="20dp"
                    android:layout_height="wrap_content">

                <TextView
                        android:id="@+id/app_act_sign_tv_gender_hint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:textColor="@drawable/app_sign_gender_text_color"
                        android:textSize="@dimen/app_et_text_size_14"
                        android:text="@string/app_login_hint_gender"/>

                <RadioGroup
                        android:id="@+id/app_act_sign_rg_gender"
                        android:layout_width="wrap_content"
                        android:orientation="horizontal"
                        android:layout_gravity="center|end"
                        android:layout_height="wrap_content">

                    <RadioButton
                            android:id="@+id/app_act_sign_rb1"
                            android:layout_width="@dimen/app_sign_gender_size"
                            android:layout_height="@dimen/app_sign_gender_size"
                            android:button="@null"
                            android:layout_marginEnd="50dp"
                            android:background="@drawable/app_sign_gender_male"/>

                    <RadioButton
                            android:id="@+id/app_act_sign_rb2"
                            android:layout_width="@dimen/app_sign_gender_size"
                            android:layout_height="@dimen/app_sign_gender_size"
                            android:layout_gravity="center"
                            android:button="@null"
                            android:background="@drawable/app_sign_gender_lady"/>
                </RadioGroup>
            </FrameLayout>

            <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/app_act_sign_et_done"
                    android:layout_width="1dp"
                    android:layout_marginTop="20dp"
                    android:layout_height="1dp"
                    android:background="@null"
                    android:inputType="textEmailAddress"
                    android:lines="1"
                    android:maxLines="1"
                    android:imeOptions="actionDone"
                    android:imeActionId="@integer/app_action_sign"
            />
        </LinearLayout>
    </ScrollView>

    <View
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_alignTop="@id/app_act_sign_scr_content"
            android:background="@drawable/app_bg_linear_gradient_covert_top"/>
    <View
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_alignBottom="@id/app_act_sign_scr_content"
            android:background="@drawable/app_bg_linear_gradient_covert_bottom"/>

    <TextView
            android:id="@+id/app_act_sign_tv_goto_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_primary"
            android:layout_marginBottom="15dp"
            android:padding="10dp"
            android:layout_below="@id/app_act_sign_scr_content"
            android:drawableStart="@mipmap/app_login_icon_back"
            android:drawablePadding="3dp"
            android:text="@string/app_sign_text_go_login"
            android:layout_marginStart="30dp"
            android:textSize="@dimen/app_et_text_size_12"/>
</RelativeLayout>